CZERTAINLY-Core_#436 Resolve SonarQube issues - reverting back